# MegaEngine

./: .gitignore  CMakeLists.txt  Makefile  compile_commands.json
assets/shaders/: basic_fragment.glsl  basic_vertex.glsl
include/: Application.hpp  Camera.hpp  Camera3D.hpp  Renderer.hpp  Scene.hpp  Shader.hpp
include/entity/: Entity.hpp  GameScript.hpp  MeshComponent.hpp  ScriptComponent.hpp  TransformComponent.hpp  Vertex.hpp
include/events/: CursorPosEvent.hpp  Event.hpp  EventBus.hpp  Layer.hpp  ViewportLayer.hpp  WindowResizeEvent.hpp
include/ext/: entt.hpp  stb_image.h
include/helpers/: FirstPersonWalkingCamera.hpp
include/input/: Keys.hpp
include/platform/: GlfwPlatform.hpp  Platform.hpp
include/utils/: FileReader.hpp  ImageLoader.hpp  Memory.hpp  Timer.hpp  Utils.hpp
src/: Application.cpp  Camera3D.cpp  Renderer.cpp  Scene.cpp  Shader.cpp  main.cpp
src/entity/: Entity.cpp
src/events/: EventBus.cpp  ViewportLayer.cpp
src/platform/: GlfwPlatform.cpp
src/utils/: FileReader.cpp  ImageLoader.cpp  Utils.cpp
